--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,1 @@
-highlighter: pygments
-markdown: redcarpet
-redcarpet:
-  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "strikethrough", "superscript"]
+baseurl: '/wordpress-document'
