Remove baseurl before test

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ install:
   - gem install jekyll html-proofer
 
 script:
+  - echo "baseurl: ''" >> _config.yml
   - jekyll build
   - htmlproofer ./_site
 
