--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
+# Jekyll
 _site
+
+# Node.js
+node_modules/
+
+# Logfiles and tempfiles
+*.log
+/log/*
+!/log/.keep
+/tmp
+
+# Other unneeded files
+doc/
+*.swp
+*~
+.project
+.DS_Store
+.idea
+.secret
