--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-url: 'https://wckansai2016.github.io'
-baseurl: '/wordpress-document'
+url: 'https://jawordpressorg.github.io/'
+baseurl: '/user-manual'
 
 github:
-  id: wckansai2016
-  repo: wordpress-document
+  id: jawordpressorg
+  repo: user-manual
